# transport_django_api

./: .gitignore  README.md  pyproject.toml
transport_project/transport_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
transport_project/transport_api/migrations/: 0001_initial.py  0002_alter_company_table.py  0002_remove_order_user.py  0003_alter_company_table.py  0004_alter_company_trucks.py  0005_companytruck_alter_company_trucks.py
transport_project/transport_project/: asgi.py  settings.py  urls.py  wsgi.py
